<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <EditText
        android:id="@+id/sign_in_email_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:hint="@string/sign_in_email_hint"
        android:editable="true"
        />

    <EditText
        android:id="@+id/sign_in_password_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/sign_in_password_hint"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/sign_in_continue_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_button"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_bright"
            />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/sign_in_register_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_register_button"
            android:textColor="@android:color/holo_blue_bright"
            />
    </LinearLayout>
</LinearLayout>
